# CruxEngine

./: .gitmodules  CMakeLists.txt  Makefile  README.md  premake5.lua
Crux/: CMakeLists.txt
Crux/data/datagrams/: engine.puml
Crux/data/shaders/: test.shader  test2.shader
Crux/src/: crux.h
Crux/src/crux/: application.cpp  application.h  core.h  entry_point.h
Crux/src/crux/core/: timestep.h
Crux/src/crux/dstructs/allocator/: allocator.h
Crux/src/crux/dstructs/array/: array.h
Crux/src/crux/dstructs/iterators/: iterator_bidirectional.h  iterator_io.h  iterator_lagacy_random_access.h  iterator_reverse.h
Crux/src/crux/dstructs/pair/: pair.h  pair_base.h
Crux/src/crux/dstructs/tree/rb_tree/: rb_tree_header.h  rb_tree_iterator.h  rb_tree_node.h
Crux/src/crux/dstructs/vector/: vector.h  vector_base.h
Crux/src/crux/events/: application_event.h  event.h  key_event.h  mouse_event.h
Crux/src/crux/gui/: gui_layer.cpp  gui_layer.h
Crux/src/crux/inputs/: input.h  key_codes.h  mouse_codes.h
Crux/src/crux/inputs/linux/: linux_input.cpp  linux_input.h
Crux/src/crux/layer/: layer.cpp  layer.h  layer_set.cpp  layer_set.h
Crux/src/crux/render/: buffer_layout.cpp  buffer_layout.h  index_buffer.h  render_cmd.cpp  render_cmd.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  renderer_context.h  shader.h  vertex_array.h  vertex_buffer.h
Crux/src/crux/render/builder/: buffer_builder.h  shader_builder.h  texture_builder.h
Crux/src/crux/render/cameras/: ortho_camera.cpp  ortho_camera.h
Crux/src/crux/render/opengl/: opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_renderer_context.cpp  opengl_renderer_context.h  opengl_shader.cpp  opengl_shader.h  opengl_texture2d.cpp  opengl_texture2d.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_buffer.cpp  opengl_vertex_buffer.h
Crux/src/crux/render/texture/: texture.h
Crux/src/crux/utils/logger/: log.h
Crux/src/crux/utils/memory/: memory.h
Crux/src/crux/utils/timer/: elapsed_timer.h
Crux/src/crux/window/: window.h
Crux/src/crux/window/linux/: linux_window.cpp  linux_window.h
Crux/src/utility/dstructs/array/: array.h
Crux/src/utility/dstructs/iterators/: iterator_forward.h  iterator_operations.h
Crux/src/utility/dstructs/map/: map.h
Crux/src/utility/dstructs/tree/rb_tree/: rb_tree.h  rb_tree_comparator.h  rb_tree_const_iterator.h
Crux/src/utility/dstructs/vector/: vector.h  vector_base.h
Crux/src/utility/utils/memory/: memory.h
Crux/test/dstructs/: test_array.cpp  test_vector.cpp
Crux/test/dstructs/iterators/: test_random_access_iterator.cpp  test_reverse_iterator.cpp
Engine/: CMakeLists.txt  Flow.h
Engine/src/Flow/: Application.cpp  EntryPoint.h
Flow/: CMakeLists.txt  Makefile
Flow/src/: Flow.h
Flow/src/Flow/: Application.cpp  Application.h  EntryPoint.h
Flow/src/Flow/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Flow/src/Flow/Layer/: Layer.cpp  Layer.h  LayerSet.cpp  LayerSet.h
Flow/src/Flow/Window/: Window.h
Flow/src/Flow/Window/Linux/: LinuxWindow.cpp  LinuxWindow.h
Sage/: CMakeLists.txt
Sage/data/: test.shader  test2.shader
Sage/src/: Sage.h  sage.h
Sage/src/Sage/: Application.cpp  Application.h
Sage/src/Sage/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sage/src/Sage/Layer/: Layer.cpp  Layer.h  LayerSet.cpp  LayerSet.h
Sage/src/Sage/Utils/Logger/: Log.h
Sage/src/Sage/Window/: Window.h
Sage/src/Sage/Window/Linux/: LinuxWindow.cpp  LinuxWindow.h
Sage/src/sage/: application.cpp  application.h  entry_point.h
Sage/src/sage/core/: timestep.h
Sage/src/sage/dstructs/allocator/: allocator.h
Sage/src/sage/dstructs/array/: array.h
Sage/src/sage/dstructs/iterators/: iterator_bidirectional.h  iterator_forward.h  iterator_io.h  iterator_lagacy_random_access.h  iterator_operations.h  iterator_reverse.h
Sage/src/sage/dstructs/map/: map.h
Sage/src/sage/dstructs/pair/: pair.h  pair_base.h
Sage/src/sage/dstructs/tree/rb_tree/: rb_tree.h  rb_tree_comparator.h  rb_tree_const_iterator.h  rb_tree_header.h  rb_tree_iterator.h  rb_tree_node.h
Sage/src/sage/dstructs/vector/: vector.h  vector_base.h
Sage/src/sage/events/: application_event.h  event.h  key_event.h  mouse_event.h
Sage/src/sage/gui/: gui_layer.cpp  gui_layer.h
Sage/src/sage/inputs/: input.h  key_codes.h  mouse_codes.h
Sage/src/sage/inputs/linux/: linux_input.cpp  linux_input.h
Sage/src/sage/layer/: layer.cpp  layer.h  layer_set.cpp  layer_set.h
Sage/src/sage/opengl/shader/: shader_utils.h
Sage/src/sage/render/: buffer.cpp  buffer.h  buffer_layout.cpp  buffer_layout.h  index_buffer.h  render_cmd.cpp  render_cmd.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  renderer_context.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h
Sage/src/sage/render/builder/: buffer_builder.h
Sage/src/sage/render/cameras/: ortho_camera.cpp  ortho_camera.h
Sage/src/sage/render/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_renderer_context.cpp  opengl_renderer_context.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_buffer.cpp  opengl_vertex_buffer.h
Sage/src/sage/utils/logger/: log.h
Sage/src/sage/utils/memory/: memory.h
Sage/src/sage/utils/timer/: elapsed_timer.h
Sage/src/sage/window/: window.h
Sage/src/sage/window/linux/: linux_window.cpp  linux_window.h
Sage/test/dstructs/: test_array.cpp  test_vector.cpp
Sage/test/dstructs/iterators/: test_random_access_iterator.cpp  test_reverse_iterator.cpp
Sandbox/: CMakeLists.txt  Makefile  main.cpp
